horizontal scrolling issue resolved
max width of body now 100% instead of 100vw

--- a/src/components/Article/article.module.css
+++ b/src/components/Article/article.module.css
@@ -61,6 +61,7 @@ Start of Article Module Styles
     visibility: visible;
 }
 
+
 .lineSeparator {
     display:block;
     width:70%;
@@ -242,7 +243,7 @@ Start of Article Module Styles
     .authorAndDate {
         flex-direction: column;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-start;
     }
     .article{
         padding: 2rem 0 0 0;
@@ -258,14 +259,23 @@ Start of Article Module Styles
 
 @media only screen and (min-width: 1000px) {
 
-    .first  {
+    .container:first-of-type:Link  {
         grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 0.25fr 1fr 0.25fr 0.25fr 0.25fr;
+        grid-template-rows: 0.25fr 1fr 0.25fr 0.15fr 0.25fr;
         grid-template-areas:
         "title title title title"
-        "articleImage articleImage articleImage authorAndDate"
-        "articleImage articleImage articleImage authorAndDate"
+        "articleImage articleImage articleImage articleImage"
+        "articleImage articleImage articleImage articleImage"
+        "authorAndDate authorAndDate authorAndDate authorAndDate"
         "article article article article";
+    }
+    .container:first-of-type:Link .articleImage {
+        object-fit: contain;
+        max-width: 1000px;
+    }
+
+    .container:first-of-type:Link .authorAndDate {
+        flex-direction: row;
     }
 
     .container:nth-child(2n + 2) {
@@ -276,6 +286,11 @@ Start of Article Module Styles
         "authorAndDate articleImage articleImage articleImage"
         "article article article article";
     }
+
+    .authorAndDate:nth-child(2n) {
+        align-items: flex-end;
+    }
+
     .title {
         padding: 0 1rem 0 0;
     }
