--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Stag Medium, Trebuchet;
-  width: 100vw;
+  width: 100%;
 }
 /*  
 
